# pjc

./: CMakeLists.txt  README.md  main.cpp
project/: CMakeLists.txt  checkFilePermissions.cpp  displayHelp.cpp  main.cpp  printFileInfo.cpp  printFileName.cpp  printFilePermissions.cpp  printFileSize.cpp  printLastAccessTime.cpp  printLastModificationTime.cpp  printLastStatusChangeTime.cpp  steganography  tryal.cpp
